// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots CustomButton with dynamic text 1`] = `
<button
  className="css-1yjiefr"
  disabled={false}
  onClick={[Function]}
>
  Change me
</button>
`;

exports[`Storyshots CustomButton with some emoji 1`] = `
<button
  className="css-1yjiefr"
  onClick={[Function]}
>
  <span
    aria-label="so cool"
    role="img"
  >
    😀 😎 👍 💯
  </span>
</button>
`;

exports[`Storyshots CustomButton with text 1`] = `
<button
  className="css-1yjiefr"
  onClick={[Function]}
>
  Hello Button
</button>
`;
